--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     its my first web site
+    and now i have created my github account
+    so now, I'm gonna do my second commit
 </body>
 </html>
